# get_video

./: README.md  docker-compose.yaml
client/: .gitignore  Cargo.toml
client/src/: main.rs
get_video_rust/: Cargo.toml
get_video_rust/src/: main.rs
server/: Cargo.toml  Dockerfile  usage.html
server/src/: main.rs
server/templates/: usage.html
server_rust/: Cargo.toml  usage.html
server_rust/src/: main.rs
