[package]
name = "get_video_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.5", features = ["blocking"]}
tokio = {version = "1.39.2", features = ["rt-multi-thread", "macros", "fs"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
