[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = {version = "1.39.2", features = ["fs", "rt-multi-thread", "signal"]}
tokio-util = {version = "0.7.11", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}